--- a/myCSS.css
+++ b/myCSS.css
@@ -4,14 +4,14 @@ body {
 	margin: 0 auto;
 }
 .homePage {
-	background: #222222;
+	background: #8CDFFA;
 }
 .container {
 	width: 960px;
 	margin: 0 auto;
 }
 .header {
-	background: #AAAAAA;
+	background: #0FC54D;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -26,11 +26,11 @@ body {
 	padding: 5;
 	float: left;
 	width: 100%;
-	height: 60px;
+	height: 40px;
 	text-align: center;
 }
 .content {
-	background: #EEEEEE;
+	background: #FFFFFF;
 	margin: 0px;
 	float: left;
 	width: 100%;
