--- a/myCSS.css
+++ b/myCSS.css
@@ -43,4 +43,14 @@ body {
 	width: 100%;
 	height: 50px;
 	text-align: center;
+
+}
+a:link {
+     color: #000000;
+}
+a:visited {
+     color: #111111;
+}
+a:hover, a:active, a:focus { 
+     text-decoration: underline;
 }
